[package]
name = "strana"
version = "0.1.0"
edition = "2021"
description = "Cypher-over-WebSocket wire protocol for embedded graph databases"
license = "MIT"
repository = "https://github.com/russellromney/strana"
readme = "README.md"
keywords = ["cypher", "graph-database", "websocket", "ladybugdb"]
categories = ["database", "network-programming"]

[lib]
name = "strana"

[[bin]]
name = "graphd"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive", "env"] }
lbug = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
uuid = { version = "1", features = ["serde", "v4"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
prost = "0.13"
crc32c = "0.6"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tokio-tungstenite = "0.26"
futures-util = "0.3"
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
