[package]
name = "graphd"
version = "0.1.0"
edition = "2021"
description = "Neo4j-compatible graph database server powered by embedded LadybugDB"
license = "MIT"
repository = "https://github.com/russellromney/graphd"
readme = "README.md"
keywords = ["cypher", "graph-database", "bolt", "ladybugdb", "graphd"]
categories = ["database", "network-programming"]

[lib]
name = "graphd"

[[bin]]
name = "graphd"
path = "src/main.rs"

[dependencies]
axum = "0.8"
clap = { version = "4", features = ["derive", "env"] }
lbug = { version = "0.14", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
uuid = { version = "1", features = ["serde", "v4"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
prost = "0.13"
chacha20poly1305 = "0.10"
crc32c = "0.6"
aws-config = "1"
aws-sdk-s3 = "1"
tar = "0.4"
zstd = "0.13"

# Bolt protocol
bolt-proto = "0.12.0"
futures-util = "0.3"
bytes = "1.0"
tokio-util = { version = "0.7", features = ["compat"] }

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
aws-config = "1"
aws-sdk-s3 = "1"
criterion = "0.5"

[[bench]]
name = "graphj_bench"
harness = false

[[bench]]
name = "throughput_bench"
harness = false
